--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
     </header>
     <br>
     <main>
-        <div class="container">
-            <video src="video/about-us.mp4" width="270" poster="img/video-poster.jpg" controls></video>
-        </div>
-        <br>
-        <div class="blockquote" class="container">
-            <blockquote>
-                <p>
-                    “Остерегайтесь оригинальности — в женской моде оригинальность может привести к маскараду.”</p>
-                <cite>Coco Chanel</cite>
-            </blockquote>
+        <div class="about-us">
+            <div class="container">
+                <video src="video/about-us.mp4" width="270" poster="img/video-poster.jpg" controls></video>
+            </div>
+            <br>
+            <div class="blockquote" class="container">
+                <blockquote>
+                    <p>
+                        “Остерегайтесь оригинальности — в женской моде оригинальность может привести к маскараду.”</p>
+                    <cite>Coco Chanel</cite>
+                </blockquote>
+            </div>
         </div>
         <br>
         <div class="container">
